# Alambre

./: .gitignore  README.md  alambre.opam  dune-project  go.mod  main.go  test.al  test.alm
ast/: ast.go  binops.go
executor/: executor.go  executor_test.go
lexer/: lexer.go  lexer_test.go
lib/: alambre.ml  ast.ml  dune  executor.ml  lexer.ml  parser.ml  token.ml
parser/: parser.go  parser_test.go
test/: dune
token/: token.go
value/: value.go
