(lang dune 3.10)

(name alambre)

(generate_opam_files true)

(documentation https://url/to/documentation)

(package
 (name alambre)
 (synopsis "Atalo con alambre")
 (description "The Argentinian version of duct tape, wire!")
 (depends ocaml dune base)
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
